--- a/index.html
+++ b/index.html
@@ -66,7 +66,127 @@
             </div>
         </div>
     </section>
+    <section id="banner2">
+        <div class="container">
+            <div class="sec">
+                <div class="basliq">
+                    <h3>Solutions for every business need.</h3>
+                    <p class="text3">The brochure must grab a viewer’s attention and hold it long
+                        enough to deliver the pertinent information.</p>
+                </div>
+                <div class="cart">
+                    <div class="cart1">
+                        <div class="cart11">
+                            <div class="picture1">
+                                <img src="https://preview.colorlib.com/theme/easylo/assets/img/icon/services1.svg"
+                                    alt="">
+                            </div>
+                            <div class="ad">
+                                <p class="addd">Home Loan</p>
+                            </div>
+                            <div class="info1">
+                                <a href="">
+                                    <h2>What are my options and the cost to exercise?
+                                    </h2>
+                                </a>
+                                <p class="text2">Tools such as a profit and tax calculator show the value of your stock
+                                    options and exercise cost.</p>
+                            </div>
 
+                        </div>
+                    </div>
+                    <div class="cart2">
+                        <div class="cart11">
+                            <div class="picture1">
+                                <img src="https://preview.colorlib.com/theme/easylo/assets/img/icon/services2.svg"
+                                    alt="">
+                            </div>
+                            <div class="ad">
+                                <p class="addd">Car Loan</p>
+                            </div>
+                            <div class="info1">
+                                <a href="">
+                                    <h2>Should I exercise now or later? How can I afford it?
+
+                                    </h2>
+                                </a>
+                                <p class="text2">Tools such as a profit and tax calculator show the value of your stock
+                                    options and exercise cost.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="cart3">
+                        <div class="cart11">
+                            <div class="picture1">
+                                <img src="https://preview.colorlib.com/theme/easylo/assets/img/icon/services3.svg"
+                                    alt="">
+                            </div>
+                            <div class="ad">
+                                <p class="addd">Business Loan</p>
+                            </div>
+                            <div class="info1">
+                                <a href="">
+                                    <h2>I own my shares - can I get liquidity now without selling?
+                                    </h2>
+                                </a>
+                                <p class="text2">Tools such as a profit and tax calculator show the value of your stock
+                                    options and exercise cost.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="banner3">
+        <div class="container">
+            <div class="sec2">
+                <div class="picture2"> <img class="picture2"
+                        src="https://preview.colorlib.com/theme/easylo/assets/img/gallery/about1.jpg.webp" alt="">
+                    <div class="picture22">
+                        <h4>99%</h4>
+                        <p class="text4">Customer Satisfaction</p>
+                    </div>
+                </div>
+                <div class="info2">
+                    <h5>We guide projects and organizations in making the right decisions.</h5>
+                    <p class="text5">Tools such as a profit simulator and tax calculator show the value of your stock
+                        options and exercise cost. The brochure must grab a viewer’s attention and hold it long enough
+                        to deliver the pertinent information.</p>
+                    <div class="div1">
+                        <div class="icon">
+                            <img class="icon"
+                                src="https://preview.colorlib.com/theme/easylo/assets/img/icon/number1.svg" alt="">
+                        </div>
+                        <div class="icon1">
+                            <p class="text6">Monthly recurring revenue</p>
+                        </div>
+                    </div>
+                    <div class="div2">
+                        <div class="icon">
+                            <img class="icon"
+                                src="https://preview.colorlib.com/theme/easylo/assets/img/icon/number1.svg" alt="">
+                        </div>
+                        <div class="icon1">
+                            <p class="text6">Customer acquisition cost</p>
+                        </div>
+                    </div>
+                    <div class="div3">
+                        <div class="icon">
+                            <img class="icon"
+                                src="https://preview.colorlib.com/theme/easylo/assets/img/icon/number1.svg" alt="">
+                        </div>
+                        <div class="icon1">
+                            <p class="text6">Number of customers</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
