--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
                             <p class="text6">Number of customers</p>
                         </div>
                     </div>
+                    <div class="btn"><button class="btn2">Learn More</button></div>
+                    
                 </div>
             </div>
         </div>
