--- a/index.html
+++ b/index.html
@@ -184,12 +184,209 @@
                         </div>
                     </div>
                     <div class="btn"><button class="btn2">Learn More</button></div>
-                    
+
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="banner4">
+        <div class="container">
+            <div class="sec3">
+                <div class="basliq2">
+                    <h3>Solutions for every business need.</h3>
+                    <p class="text3">The brochure must grab a viewer’s attention and hold it long
+                        enough to deliver the pertinent information.</p>
+                </div>
+                <div class="cart4">
+                    <div class="cart41">
+                        <div class="cart411">
+                            <img src="services4.svg" alt="">
+                        </div>
+                        <div class="fff">
+                            <div class="ad">
+
+                            </div>
+                            <div class="info1">
+                                <a href="">
+                                    <h5>Quick apply</h5>
+
+                                </a>
+                                <p class="text22">Tools such as a profit and tax calculator show the value of your stock
+                                    options and exercise cost.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cart41">
+                        <div class="cart411">
+                            <img src="services5.svg" alt="">
+                        </div>
+                        <div class="fff">
+                            <div class="ad">
+
+                            </div>
+                            <div class="info1">
+                                <a href="">
+                                    <h5>Online&Secure</h5>
+
+
+                                </a>
+                                <p class="text22">Tools such as a profit and tax calculator show the value of your stock
+                                    options and exercise cost.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cart41">
+                        <div class="cart411">
+                            <img src="services6.svg" alt="">
+                        </div>
+                        <div class="fff">
+                            <div class="ad">
+
+                            </div>
+                            <div class="info1">
+                                <a href="">
+                                    <h5>Just Time
+                                    </h5>
+                                </a>
+                                <p class="text22">Tools such as a profit and tax calculator show the value of your stock
+                                    options and exercise cost.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cart41">
+                        <div class="cart411">
+
+                            <img src="services7.svg" alt="">
+                        </div>
+                        <div class="fff">
+                            <div class="ad">
+
+                            </div>
+                            <div class="info1">
+                                <a href="">
+                                    <h5>Low Interest
+                                    </h5>
+                                </a>
+                                <p class="text22">Tools such as a profit and tax calculator show the value of your stock
+                                    options and exercise cost.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="banner3">
+        <div class="container">
+            <div class="sec2">
+                <!-- <div class="picture2"> <img class="picture2"
+                        src="https://preview.colorlib.com/theme/easylo/assets/img/gallery/about1.jpg.webp" alt="">
+                    <div class="picture22">
+                        <h4>99%</h4>
+                        <p class="text4">Customer Satisfaction</p>
+                    </div>
+                </div> -->
+                <div class="info2">
+                    <h6>Get loan in 3 easy steps</h6>
+                    <p class="text5">Tools such as a profit simulator and tax calculator show the value of your stock
+                        options and exercise cost. The brochure must grab a viewer’s attention and hold it long enough
+                        to deliver the pertinent information.</p>
+                    <div class="div1">
+                        <div class="icon">
+                            <img class="icon"
+                                src="https://preview.colorlib.com/theme/easylo/assets/img/icon/number1.svg" alt="">
+                        </div>
+                        <div class="icon1">
+                            <p class="text6">Monthly recurring revenue</p>
+                        </div>
+                    </div>
+                    <div class="div2">
+                        <div class="icon">
+                            <img class="icon"
+                                src="https://preview.colorlib.com/theme/easylo/assets/img/icon/number1.svg" alt="">
+                        </div>
+                        <div class="icon1">
+                            <p class="text6">Customer acquisition cost</p>
+                        </div>
+                    </div>
+                    <div class="div3">
+                        <div class="icon">
+                            <img class="icon"
+                                src="https://preview.colorlib.com/theme/easylo/assets/img/icon/number1.svg" alt="">
+                        </div>
+                        <div class="icon1">
+                            <p class="text6">Number of customers</p>
+                        </div>
+                    </div>
+                    <div class="btn"><button class="btn2">Learn More</button></div>
+
+                </div>
+                <div class="sec2">
+                    <div class="picture2"> <img class="picture2"
+                            src="https://preview.colorlib.com/theme/easylo/assets/img/gallery/about2.jpg.webp" alt="">
+                        <!-- <div class="picture22">
+                            <h4>99%</h4>
+                            <p class="text4">Customer Satisfaction</p>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section id="banner5">
+<div class="sect1">
+    <div class="container">
+        <div class="sect2">
+            <div class="basliq4">
+                <div class="basliq2">
+                    <h3>Latest News</h3>
+                </div>
+            </div>
+            <div class="sect3">
+                <div class="sect4">
+                    <div class="picture4">
+                       <a href=""><img class="picture4" src="https://preview.colorlib.com/theme/easylo/assets/img/gallery/blog1.jpg.webp" alt=""></a> 
+                    </div>
+                    <div class="info4">
+                        <span class="date">20 March 2021</span>
+                        <a href=""><h5>What are my options worth and the cost to exercise</h5></a>
+                        <p class="text6">Tools such as a profit simulator and tax calculator show the value of your stock
+                            options and exercise cost. The brochure must grab a viewer’s attention and hold it long enough
+                            to deliver the pertinent information.</p>
+                    </div>
+                </div>
+                <div class="sect4"><div class="picture4">
+                    <a href=""><img class="picture4" src="https://preview.colorlib.com/theme/easylo/assets/img/gallery/blog2.jpg.webp" alt=""></a> 
+                 </div>
+                 <div class="info4">
+                     <span class="date">20 March 2021</span>
+                    <a href=""><h5>From start to finish, we were acquired within 30-days </h5></a> 
+                     <p class="text6">Tools such as a profit simulator and tax calculator show the value of your stock
+                         options and exercise cost. The brochure must grab a viewer’s attention and hold it long enough
+                         to deliver the pertinent information.</p>
+                 </div></div>
+                <div class="sect4"><div class="picture4">
+                    <a href=""><img class="picture4" src="https://preview.colorlib.com/theme/easylo/assets/img/gallery/blog3.jpg.webp" alt=""></a> 
+                 </div>
+                 <div class="info4">
+                     <span class="date">20 March 2021</span>
+                     <a href=""><h5>We’ll connect you with the right people to start</h5></a>
+                     <p class="text6">Tools such as a profit simulator and tax calculator show the value of your stock
+                         options and exercise cost. The brochure must grab a viewer’s attention and hold it long enough
+                         to deliver the pertinent information.</p>
+                 </div></div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
